--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,10 @@
-<h1>Sign Up Form!</h1>
+<h1>Login</h1>
 
-<form action="/register" method="POST">
+<form action="/login" method="POST">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
-    <button>Submit</button>
+    <button>Login</button>
+
 </form>
 
 <li><a href="/register">Sign Up!</a></li>
