--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,3 +1,9 @@
 <h1>This is the secret page!</h1>
 
 <p>YOu found me.</p>
+
+<li><a href="/register">Sign Up!</a></li>
+
+<li><a href="/login">Login!</a></li>
+
+<li><a href="/logout">Logout</a></li>
